# pointdexter

./: .gitignore  Cargo.toml  README.md  config.yaml  matt-0.yaml
src/: chebyshev.rs  cluster_fit.rs  detection.rs  exposure.rs  gauss.rs  hpix.rs  initial_condition.rs  initial_condition_3d.rs  lib.rs  lost-and-found.rs  main.rs  observation.rs  sync.rs  utils.rs
src/io/: cli.rs  load_detections.rs  load_ics.rs  mod.rs
